constructed the main structure
